--- a/ChiapasOculto.WPF/MainWindow.xaml
+++ b/ChiapasOculto.WPF/MainWindow.xaml
@@ -6,37 +6,43 @@
       xmlns:local="clr-namespace:ChiapasOculto.WPF"
       mc:Ignorable="d"
       Title="Chiapas Oculto" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
-    
+
     <Grid Background="#E8FFCC">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="408*"/>
+            <ColumnDefinition Width="111*"/>
+            <ColumnDefinition Width="111*"/>
+            <ColumnDefinition Width="102*"/>
+            <ColumnDefinition Width="68*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="44*"/>
             <!-- Área superior libre -->
             <RowDefinition Height="Auto"/>
             <!-- Fila para los botones -->
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0"  Orientation="Horizontal" Background="White" Height="60" DockPanel.Dock="Top" Margin="0,0,0,297">
+        <StackPanel Grid.Row="0"  Orientation="Horizontal" Background="White" Grid.ColumnSpan="5">
             <TextBlock Text="BIENVENID@ (Nombre)" Foreground="Red" FontWeight="Bold" VerticalAlignment="Center" Margin="20,0"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="REGISTRARSE" Margin="10"/>
-                <Button Content="INICIAR SESIÓN" Margin="10"/>
-                <Button Content="OPERADORAS" Margin="10"/>
-            </StackPanel>
         </StackPanel>
 
-        <Border Background="#DCDCDC" Margin="26,76,575,178" CornerRadius="5" Padding="10">
+        <Border Background="#DCDCDC" Margin="26,23,168,178" CornerRadius="5" Padding="10" Grid.Row="1">
             <StackPanel Grid.Row="1">
                 <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
                 <TextBlock Text="Correo:"/>
                 <TextBlock Text="Suscripción:"/>
             </StackPanel>
         </Border>
-        
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20">
-                <Button Content="AGREGAR" Height="37" Width="134" Background="#0BC333" Margin="10,0"/>
-                <Button Content="ELIMINAR" Height="37" Width="134" Background="#C30B0B" Margin="10,0"/>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left" Margin="179,20,0,20" Width="442" Grid.ColumnSpan="3">
+            <Button Content="AGREGAR" Height="37" Width="134" Background="#0BC333" Margin="10,0"/>
+            <Button Content="ELIMINAR" Height="37" Width="134" Background="#C30B0B" Margin="10,0"/>
             <Button Content="MODIFICAR" Height="37" Width="134" Background="#E98623"/>
         </StackPanel>
-        </Grid>
+        <Button Grid.Column="1" Content="REGISTRARSE" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"/>
+        <Button Grid.Column="2" Content="INICIAR SESIÓN" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="100"/>
+        <Button Grid.Column="3" Content="OPERADORAS" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"/>
+    </Grid>
 
 </Window>
