--- a/ChiapasOculto.WPF/Registrarse.xaml
+++ b/ChiapasOculto.WPF/Registrarse.xaml
@@ -1,27 +1,28 @@
-﻿<Window x:Class="ChiapasOculto.WPF.Resgistrarse"
+﻿<Window x:Class="ChiapasOculto.WPF.Registrarse"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChiapasOculto.WPF"
         mc:Ignorable="d"
-        Title="Resgistrarse" Height="450" Width="800">
+        Title="Registrarse" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="43*" />
+            <ColumnDefinition Width="437*"/>
+            <ColumnDefinition Width="320*" />
         </Grid.ColumnDefinitions>
 
         <!-- Formulario -->
-        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="0">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="0" Grid.ColumnSpan="2">
             <StackPanel Margin="30">
                 <TextBlock FontSize="24" FontWeight="Bold" Text="Bienvenido a Chiapas Oculto" 
-                           Margin="0,20,0,20" HorizontalAlignment="Center"/>
+                     Margin="0,20,0,20" HorizontalAlignment="Center"/>
 
                 <!-- Icono de perfil -->
                 <Ellipse Fill="LightGreen" Width="80" Height="80" HorizontalAlignment="Center"/>
                 <TextBlock Text="horacio.12" Background="Violet" Foreground="White" 
-                           HorizontalAlignment="Center" Margin="0,5,0,20" Padding="5,2"/>
+                     HorizontalAlignment="Center" Margin="0,5,0,20" Padding="5,2"/>
 
                 <!-- Campos del formulario -->
                 <StackPanel Margin="10">
@@ -51,9 +52,8 @@
                 <!-- Checkbox y botón -->
                 <CheckBox Content="Recordarme mi nombre de usuario" Margin="10"/>
                 <Button Content="Registrarse" Background="DarkOliveGreen" Foreground="White" 
-                        Width="150" Height="35" HorizontalAlignment="Center" Margin="0,10"/>
+                  Width="150" Height="35" HorizontalAlignment="Center" Margin="0,10"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
-    
 </Window>
