--- a/ChiapasOculto.WPF/MainWindow.xaml
+++ b/ChiapasOculto.WPF/MainWindow.xaml
@@ -16,8 +16,8 @@
             <ColumnDefinition Width="43*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="7*"/>
-            <RowDefinition Height="44*"/>
+            <RowDefinition Height="49.005"/>
+            <RowDefinition/>
             <!-- Área superior libre -->
             <RowDefinition Height="Auto"/>
             <!-- Fila para los botones -->
@@ -25,10 +25,10 @@
 
         <Canvas Grid.Row="0" Background="White" Grid.ColumnSpan="5">
             <TextBlock Text="BIENVENID@" Foreground="Black" FontWeight="Bold"
-               Canvas.Left="50" Canvas.Top="30"/>
+               Canvas.Left="152" Canvas.Top="12"/>
 
-            <TextBlock Text="Nombre" Foreground="Red" FontWeight="Bold"
-               Canvas.Left="150" Canvas.Top="80"/>
+            <TextBlock Foreground="Red" FontWeight="Bold"
+               Canvas.Left="152" Canvas.Top="28" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Language="es-mx" Text="("/><Run Text="Nombre"/><Run Language="es-mx" Text=")"/></TextBlock>
         </Canvas>
 
         <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
@@ -38,6 +38,7 @@
                 <TextBlock Text="Suscripción:"/>
             </StackPanel>
         </Border>
+
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left" Margin="179,20,0,20" Width="442" Grid.ColumnSpan="3">
             <Button Content="AGREGAR" Height="37" Width="134" Background="#0BC333" Margin="10,0"/>
@@ -50,6 +51,64 @@
 
         <Button Grid.Column="2" Content="INICIAR SESIÓN" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="100"/>
         <Button Grid.Column="3" Content="OPERADORAS" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"/>
+        <Image HorizontalAlignment="Left" Height="86" VerticalAlignment="Top" Width="150" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\logoc.png" Grid.RowSpan="2" Margin="0,-11,0,0"/>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Operador@: (Nombre)" FontWeight="Bold"/>
+                <TextBlock Text="Correo:"/>
+                <TextBlock Text="Suscripción:"/>
+            </StackPanel>
+        </Border>
+        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
     </Grid>
 
 </Window>
