--- a/ChiapasOculto.WPF/IniciarSesion.xaml
+++ b/ChiapasOculto.WPF/IniciarSesion.xaml
@@ -34,7 +34,7 @@
             </Canvas>
 
             <Button Grid.Column="1" Content="REGISTRARSE" HorizontalAlignment="Center"
-Height="29" VerticalAlignment="Center" Width="82"/>
+Height="29" VerticalAlignment="Center" Width="82" Click="BtnRegistrarse_Click"/>
 
             <Button Grid.Column="2" Content="INICIAR SESIÓN" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="100"/>
             <Button Grid.Column="3" Content="OPERADORAS" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"/>
