--- a/ChiapasOculto.WPF/MainWindow.xaml
+++ b/ChiapasOculto.WPF/MainWindow.xaml
@@ -49,8 +49,10 @@
         Height="29" VerticalAlignment="Center" Width="82"
         Click="BtnRegistrarse_Click"/>
 
-        <Button Grid.Column="2" Content="INICIAR SESIÓN" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="100"/>
-        <Button Grid.Column="3" Content="OPERADORAS" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"/>
+        <Button Grid.Column="2" Content="INICIAR SESIÓN" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="100"
+                Click="BtnIniciarSesion_Click"/>
+        <Button Grid.Column="3" Content="OPERADORAS" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"
+                 Click="BtnOperadores_Click"/>
         <Image HorizontalAlignment="Left" Height="86" VerticalAlignment="Top" Width="150" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\logoc.png" Grid.RowSpan="2" Margin="0,-11,0,0"/>
         <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
         <Border Background="#DCDCDC" Margin="28,29,220,206" CornerRadius="5" Padding="10" Grid.Row="1">
@@ -108,7 +110,7 @@
                 <TextBlock Text="Suscripción:"/>
             </StackPanel>
         </Border>
-        <Image HorizontalAlignment="Left" Height="117" Margin="60,29,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
+        <Image HorizontalAlignment="Left" Height="117" Margin="47,24,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Source="C:\Users\hervi\Source\Repos\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png"/>
     </Grid>
 
 </Window>
