Se compuso todo

--- a/ChiapasOculto.WPF/IniciarSesion.xaml
+++ b/ChiapasOculto.WPF/IniciarSesion.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChiapasOculto.WPF"
         mc:Ignorable="d"
-        Title="IniciarSesion" Height="450" Width="800">
+        Title="IniciarSesion" Height="450" Width="800" WindowState="Maximized">
     <Grid>
         <Grid Background="#E8FFCC">
             <Grid.ColumnDefinitions>
@@ -51,7 +51,7 @@ Height="29" VerticalAlignment="Center" Width="82" Click="BtnRegistrarse_Click"/>
 
 
             <TextBox HorizontalAlignment="Left" Margin="106,239,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="190"  RenderTransformOrigin="0.283,0.638" Background="{x:Null}" BorderBrush="#FF101012"/>
-            <Image Grid.Column="1" Grid.ColumnSpan="4" HorizontalAlignment="Left" Height="374" Margin="78,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="294" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\CCPAQUETE.jpg"/>
+            <Image Grid.Column="1" Grid.ColumnSpan="4" HorizontalAlignment="Left"  Margin="78,0,0,0" Grid.Row="1" VerticalAlignment="Center" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\CCPAQUETE.jpg"/>
             <Image HorizontalAlignment="Left" Height="170" VerticalAlignment="Top" Width="267" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png" RenderTransformOrigin="4.324,0.858" Grid.Row="1" Margin="59,0,0,0"/>
             <Image HorizontalAlignment="Left" Height="86" VerticalAlignment="Top" Width="150" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\logoc.png" Grid.RowSpan="2" Margin="0,-11,0,0"/>
 
